Added Libs and changed some layouts

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/background_dark"
@@ -9,112 +9,181 @@
     android:paddingTop="20dp"
     android:screenOrientation="portrait">
 
-    <EditText
-        android:id="@+id/txtTeam"
-        android:layout_width="match_parent"
-        android:layout_height="50sp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="10dp"
-        android:background="#ffffff"
-        android:ems="10"
-        android:hint="@string/teamName"
-        android:inputType="number"
-        android:paddingLeft="15dp" />
-
-    <EditText
-        android:id="@+id/txtMatch"
-        android:layout_width="match_parent"
-        android:layout_height="50sp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="10dp"
-        android:background="#ffffff"
-        android:ems="10"
-        android:hint="@string/matchNum"
-        android:inputType="number"
-        android:paddingLeft="15dp" />
-
-    <RadioGroup
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_marginBottom="10dp"
-        android:baselineAligned="false"
-        android:orientation="horizontal">
+        android:layout_gravity="center_horizontal|bottom">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:id="@+id/storm">
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/logo"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/storm"
+                android:textSize="20sp"
+                android:textColor="@android:color/white"
+                android:layout_gravity="center_vertical"
+                android:paddingLeft="10dp"
+                />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:id="@+id/twitter">
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/twitterimg"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/tweet"
+                android:textSize="20sp"
+                android:textColor="@android:color/white"
+                android:layout_gravity="center_vertical"
+                android:paddingLeft="10dp"
+                />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:id="@+id/git">
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/github"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/git"
+                android:textSize="20sp"
+                android:textColor="@android:color/white"
+                android:layout_gravity="center_vertical"
+                android:paddingLeft="10dp"
+                />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:id="@+id/web">
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/web"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/website"
+                android:textSize="20sp"
+                android:textColor="@android:color/white"
+                android:layout_gravity="center_vertical"
+                android:paddingLeft="10dp"
+                />
+        </LinearLayout>
+    </LinearLayout>
 
-        <RadioButton
-            android:id="@+id/radBlue"
-            android:layout_width="match_parent"
-            android:layout_height="50sp"
-            android:layout_weight="1"
-            android:background="@android:color/holo_blue_light"
-            android:gravity="center"
-            android:text="@string/blue"
-            android:textColor="@android:color/black" />
-
-        <RadioButton
-            android:id="@+id/radRed"
-            android:layout_width="match_parent"
-            android:layout_height="50sp"
-            android:layout_weight="1"
-            android:background="@android:color/holo_red_light"
-            android:gravity="center"
-            android:text="@string/red"
-            android:textColor="@android:color/black" />
-    </RadioGroup>
-    <Button
-        android:id="@+id/btn_begin"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="30dp"
-        android:background="@android:color/background_light"
-        android:onClick="startMatch"
-        android:stateListAnimator="@null"
-        android:text="@string/begin"
-        android:textColor="@android:color/black"
-        android:textStyle="bold" />
-
-    <Button
-        android:id="@+id/start_qr_main"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp"
-        android:background="@android:color/background_light"
-        android:onClick="startQR"
-        android:stateListAnimator="@null"
-        android:text="@string/gen"
-        android:textColor="@android:color/black"
-        android:textStyle="bold" />
-
-    <Button
-        android:id="@+id/twit"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp"
-        android:background="@color/twitter"
-        android:stateListAnimator="@null"
-        android:onClick="twitterOpen"
-        android:text="@string/tweet"
-        android:textColor="@android:color/white"
-        android:textStyle="bold" />
-
-    <Button
-        android:id="@+id/web"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp"
-        android:background="@android:color/background_light"
-        android:onClick="webOpen"
-        android:stateListAnimator="@null"
-        android:text="@string/website"
-        android:textColor="@android:color/black"
-        android:textStyle="bold" />
-
-    <ImageView
-        android:layout_width="369dp"
-        android:layout_height="350dp"
-        android:id="@+id/imageView"
+        android:orientation="vertical"
+        android:layout_gravity="center_horizontal|top"
+        android:paddingLeft="20dp"
+        android:paddingTop="20dp"
+        android:paddingRight="20dp"
+        android:padding="0dp">
+       <ImageView
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:id="@+id/image"
         android:layout_gravity="center_horizontal"
         android:src="@drawable/logo" />
+        <EditText
+            android:id="@+id/txtTeam"
+            android:layout_width="match_parent"
+            android:layout_height="50sp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="10dp"
+            android:background="#ffffff"
+            android:ems="10"
+            android:hint="@string/teamName"
+            android:inputType="number"
+            android:paddingLeft="15dp" />
 
-</LinearLayout>
+        <EditText
+            android:id="@+id/txtMatch"
+            android:layout_width="match_parent"
+            android:layout_height="50sp"
+            android:layout_marginBottom="10dp"
+            android:background="#ffffff"
+            android:ems="10"
+            android:hint="@string/matchNum"
+            android:inputType="number"
+            android:paddingLeft="15dp" />
+
+        <RadioGroup
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginBottom="10dp"
+            android:baselineAligned="false"
+            android:orientation="horizontal">
+
+            <RadioButton
+                android:id="@+id/radBlue"
+                android:layout_width="match_parent"
+                android:layout_height="50sp"
+                android:layout_weight="1"
+                android:background="@android:color/holo_blue_light"
+                android:gravity="center"
+                android:text="@string/blue"
+                android:textColor="@android:color/black" />
+
+            <RadioButton
+                android:id="@+id/radRed"
+                android:layout_width="match_parent"
+                android:layout_height="50sp"
+                android:layout_weight="1"
+                android:background="@android:color/holo_red_light"
+                android:gravity="center"
+                android:text="@string/red"
+                android:textColor="@android:color/black" />
+        </RadioGroup>
+
+        <Button
+            android:id="@+id/btn_begin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="30dp"
+            android:background="@android:color/background_light"
+            android:onClick="startMatch"
+            android:stateListAnimator="@null"
+            android:text="@string/begin"
+            android:textColor="@android:color/black"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/start_qr_main"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="30dp"
+            android:background="@android:color/background_light"
+            android:onClick="startQR"
+            android:stateListAnimator="@null"
+            android:text="@string/gen"
+            android:textColor="@android:color/black"
+            android:textStyle="bold" />
+
+    </LinearLayout>
+
+</FrameLayout>
