--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FF9800</color>
-    <color name="colorPrimaryDark">#E65100</color>
-    <color name="colorAccent">#D50000</color>
+    <color name="colorAccent">#FF7F00</color>
+    <color name="colorPrimaryDark">#B71C1C</color>
+    <color name="colorPrimary">#BF0000</color>
     <color name="bg">#000000</color>
     <color name="white">#FFFFFF</color>
     <color name="red_reg">#ff3333</color>
