--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -4,6 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:textSize="35sp"
-    android:background="@android:color/black"
-    android:textColor="#ffff"
+    android:background="@android:color/white"
+    android:textColor="#000"
     android:gravity="center_horizontal"/>
