--- a/app/src/main/res/layout/fragment_submit.xml
+++ b/app/src/main/res/layout/fragment_submit.xml
@@ -1,6 +1,40 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:background="@android:color/black">
-</FrameLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Enter Notes"
+        android:id="@+id/textView7"
+        android:textColor="#fff"
+        android:textSize="50dp"
+        android:layout_gravity="center_horizontal" />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:id="@+id/editText"
+        android:layout_gravity="center_horizontal"
+        android:textColor="#000"
+        android:background="@color/white" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Submit"
+        android:id="@+id/button2"
+        android:textSize="50dp"
+        android:layout_above="@+id/btnDecHigh"
+        android:layout_centerHorizontal="true"
+        android:onClick="highScore"
+        android:background="@android:color/background_light"
+        android:layout_marginBottom="20dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="50dp" />
+
+</LinearLayout>
