--- a/app/src/main/res/layout/fragment_tele.xml
+++ b/app/src/main/res/layout/fragment_tele.xml
@@ -1,7 +1,138 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/black">
+    android:background="@android:color/black"
+    android:orientation="vertical">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_above="@+id/linearLayout"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="113dp">
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="High Goal: 0"
+        android:id="@+id/btnHigh"
+        android:textSize="50dp"
+        android:layout_above="@+id/btnDecHigh"
+        android:layout_centerHorizontal="true"
+        android:onClick="highScore"
+        android:background="@android:color/background_light"
+        android:layout_marginBottom="20dp" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="-"
+            android:background="@android:color/background_light"
+            android:id="@+id/btnDecHigh"
+            android:textSize="50dp"
+            android:layout_centerHorizontal="true"
+            android:layout_alignBaseline="@+id/ramp"
+            android:layout_marginBottom="50dp"
+            android:layout_alignBottom="@+id/btnHigh"
+            android:onClick="decHighScore" />
+
+        <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Low Goal: 0"
+        android:id="@+id/btnLow"
+        android:textSize="50dp"
+        android:layout_below="@+id/btnDecHigh"
+        android:layout_centerHorizontal="true"
+        android:onClick="lowScrore"
+        android:background="@android:color/background_light"
+        android:layout_marginBottom="20dp" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="-"
+        android:id="@+id/btnDecLow"
+        android:textSize="50dp"
+        android:layout_below="@+id/btnLow"
+        android:layout_centerHorizontal="true"
+        android:onClick="decLowScrore"
+        android:background="@android:color/background_light" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/linearLayout">
+
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Move onto ramp"
+            android:id="@+id/ramp"
+            android:button="@drawable/box"
+            android:textSize="25sp"
+            android:paddingLeft="20dp"
+            android:checked="false"
+            android:textColor="@color/white"
+            android:layout_above="@+id/scale"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="30dp"
+            android:layout_gravity="center_vertical" />
+
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Scale the Castle"
+            android:id="@+id/scale"
+
+            android:button="@drawable/box"
+            android:textSize="25sp"
+            android:paddingLeft="20dp"
+            android:checked="false"
+            android:layout_above="@+id/scale"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="30dp"
+            android:textColor="@color/white"/>
+
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Capture the Castle"
+            android:id="@+id/capture"
+            android:textColor="#ffffff"
+            android:button="@drawable/box"
+            android:textSize="25sp"
+            android:paddingLeft="20dp"
+            android:checked="false"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="30dp" />
+
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Breach OuterWorks"
+            android:id="@+id/breach"
+            android:button="@drawable/box"
+            android:textSize="25sp"
+            android:paddingLeft="20dp"
+            android:checked="false"
+            android:textColor="@color/white"
+            android:layout_above="@+id/ramp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="30dp" />
+            </LinearLayout>
 
 </RelativeLayout>
