--- a/app/src/main/res/layout/fragment_submit.xml
+++ b/app/src/main/res/layout/fragment_submit.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@android:color/black">
+    android:background="@android:color/black"
+    android:weightSum="1">
 
     <TextView
         android:layout_width="wrap_content"
@@ -15,13 +16,21 @@
         android:textSize="50dp"
         android:layout_gravity="center_horizontal" />
 
+
     <EditText
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="wrap_content"
         android:id="@+id/editText"
+        android:hint="Enter Notes Here"
+        android:digits="qwertyuiopasdfghjklzxcvbnm.;1234567890 "
+        android:textColor="@android:color/black"
+        android:background="#ffffffff"
+        android:gravity="top|left"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_gravity="center_horizontal"
-        android:textColor="#000"
-        android:background="@color/white" />
+        android:layout_weight="0.18" />
 
     <Button
         android:layout_width="match_parent"
@@ -31,7 +40,7 @@
         android:textSize="50dp"
         android:layout_above="@+id/btnDecHigh"
         android:layout_centerHorizontal="true"
-        android:onClick="highScore"
+        android:onClick="submitData"
         android:background="@android:color/background_light"
         android:layout_marginBottom="20dp"
         android:layout_gravity="center_horizontal"
