--- a/app/src/main/res/layout/fragment_defense.xml
+++ b/app/src/main/res/layout/fragment_defense.xml
@@ -130,20 +130,6 @@
             android:textColor="#fff"
             android:layout_marginBottom="20sp" />
 
-        <ScrollView
-            tools:context="fragments.DefenseFragment"
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:tools="http://schemas.android.com/tools"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#000"
-            android:id="@+id/scrollView">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical" >
-
                 <Spinner
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -269,7 +255,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Able to Cross the def"
-                    android:id="@+id/checkBox6"
+                    android:id="@+id/chkDef5"
                     android:textColor="#ffffff"
                     android:button="@drawable/box"
                     android:textSize="25sp"
@@ -285,7 +271,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Cross and Weakened"
-                    android:id="@+id/checkBox5"
+                    android:id="@+id/chkWeak5"
                     android:textColor="#ffffff"
                     android:button="@drawable/box"
                     android:textSize="25sp"
@@ -299,6 +285,3 @@
 
             </LinearLayout>
         </ScrollView>
-    </LinearLayout>
-
-</ScrollView>
