--- a/app/src/main/res/layout/fragment_submit.xml
+++ b/app/src/main/res/layout/fragment_submit.xml
@@ -26,6 +26,7 @@
         android:textColor="@android:color/black"
         android:background="#ffffffff"
         android:gravity="top|left"
+        android:maxLength="140"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
