--- a/app/src/main/res/layout/fragment_submit.xml
+++ b/app/src/main/res/layout/fragment_submit.xml
@@ -22,11 +22,11 @@
         android:layout_height="wrap_content"
         android:id="@+id/editText"
         android:hint="Enter Notes Here"
-        android:digits="qwertyuiopasdfghjklzxcvbnm.;1234567890 "
+        android:digits="qwertyuiopasdfghjklzxcvbnm.1234567890 "
         android:textColor="@android:color/black"
         android:background="#ffffffff"
         android:gravity="top|left"
-        android:maxLength="140"
+        android:maxLength="90"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
