--- a/app/src/main/res/layout/fragment_tele.xml
+++ b/app/src/main/res/layout/fragment_tele.xml
@@ -22,7 +22,7 @@
         android:layout_above="@+id/linearLayout"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="113dp"
-        android:layout_marginTop="150dp">
+        android:layout_marginTop="20dp">
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -70,6 +70,70 @@
         android:layout_centerHorizontal="true"
         android:onClick="decLowScrore"
         android:background="@android:color/background_light" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Human Player able to roll ball over secret passage?"
+            android:id="@+id/txt"
+            android:textColor="#fff"
+            android:textSize="30dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="30dp"
+            android:gravity="center"/>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Yes: 0"
+            android:id="@+id/btnYes"
+            android:textSize="50dp"
+            android:layout_above="@+id/btnDecHigh"
+            android:layout_centerHorizontal="true"
+            android:onClick="humanYes"
+            android:background="@android:color/background_light"
+            android:layout_marginBottom="20dp" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="-"
+            android:background="@android:color/background_light"
+            android:id="@+id/btnYesSub"
+            android:textSize="50dp"
+            android:layout_centerHorizontal="true"
+            android:layout_alignBaseline="@+id/ramp"
+            android:layout_marginBottom="50dp"
+            android:layout_alignBottom="@+id/btnHigh"
+            android:onClick="humanYesSub" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="No: 0"
+            android:id="@+id/btnNo"
+            android:textSize="50dp"
+            android:layout_above="@+id/btnDecHigh"
+            android:layout_centerHorizontal="true"
+            android:onClick="humanNo"
+            android:background="@android:color/background_light"
+            android:layout_marginBottom="20dp" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="-"
+            android:background="@android:color/background_light"
+            android:id="@+id/btnNoSub"
+            android:textSize="50dp"
+            android:layout_centerHorizontal="true"
+            android:layout_alignBaseline="@+id/ramp"
+            android:layout_marginBottom="50dp"
+            android:layout_alignBottom="@+id/btnHigh"
+            android:onClick="humanNoSub" />
 
     </LinearLayout>
 
@@ -144,52 +208,6 @@
             android:layout_alignParentStart="true"
             android:layout_marginBottom="30dp" />
             </LinearLayout>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Human Player able to roll ball over secret passage?"
-        android:id="@+id/txt"
-        android:textColor="#fff"
-        android:textSize="30dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="30dp"
-        android:layout_marginBottom="30dp"
-        android:gravity="center"/>
-    <RadioGroup
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_marginBottom="50dp"
-        android:baselineAligned="false"
-        android:orientation="horizontal">
-
-        <RadioButton
-            android:id="@+id/yes"
-            android:layout_width="match_parent"
-            android:layout_height="50sp"
-            android:layout_weight="1"
-            android:background="@color/colorAccent"
-            android:gravity="center"
-            android:text="Yes"
-            android:checked="false"
-            android:button="@null" />
-
-        <RadioButton
-            android:id="@+id/no"
-            android:layout_width="match_parent"
-            android:layout_height="50sp"
-            android:layout_weight="1"
-            android:background="@android:color/holo_red_light"
-            android:gravity="center"
-            android:text="No"
-            android:textColor="@android:color/black"
-            android:checked="false"
-            android:button="@null" />
-    </RadioGroup>
 
 </LinearLayout>
 </ScrollView>
